--- a/myApp/package.json
+++ b/myApp/package.json
@@ -13,6 +13,8 @@
     "react": "^19.0.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "image-webpack-loader": "^8.1.0",
     "vite": "^6.2.0"
   }
 }
